[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Graphics/1bitplat_mono_trans_packed.png" type="Texture" id=1]
[ext_resource path="res://Objects/Key/Key.gd" type="Script" id=2]
[ext_resource path="res://Assets/Audio/SFX/chime.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Graphics/Lights/star_05.png" type="Texture" id=4]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.272222, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.505556, 0.3 ), 0.0, 0.0, 0, 0, Vector2( 0.75, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CircleShape2D" id=2]
radius = 4.0

[node name="Key" type="Node2D"]
script = ExtResource( 2 )
frequency = 4.0
float_curve = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -3.14545 )
texture = ExtResource( 1 )
offset = Vector2( 0, -2 )
region_enabled = true
region_rect = Rect2( 276, 70, 8, 4 )

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -2 )
shape = SubResource( 2 )

[node name="AudioSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 4 )
texture_scale = 0.25
energy = 0.4

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="finished" from="AudioSFX" to="." method="_on_AudioSFX_finished"]
